--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -34,12 +34,16 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@2.0.0
         with:
           # FTP server name (you may need to specify a port)
-          ftp_server: www.florianhofer.it
+          FTP_SERVER: www.florianhofer.it
           # FTP account username
-          ftp_username: ${{ secrets.WWW-FTPU }}
+          FTP_USERNAME: ${{ secrets.WWW-FTPU }}
           # FTP account password
-          ftp_password: ${{ secrets.WWW-FTPP }}
+          FTP_PASSWORD: ${{ secrets.WWW-FTPP }}
           # The local folder to copy, defaults to root project folder
-          local_dir: www/
+          LOCAL_DIR: www/
           # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
-          remote_dir: www.florianhofer.it/
+          REMOTE_DIR: www.florianhofer.it/
+          # upload protocol
+          METHOD: ftp
+          # server port
+          PORT: 21
