--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -32,7 +32,7 @@ jobs:
           path: www/cgi-bin/
       - name: Push to ftp server
         uses: SamKirkland/FTP-Deploy-Action@2.0.0
-        with:
+        env:
           # FTP server name (you may need to specify a port)
           FTP_SERVER: www.florianhofer.it
           # FTP account username
