--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -36,9 +36,9 @@ jobs:
           # FTP server name (you may need to specify a port)
           FTP_SERVER: www.florianhofer.it
           # FTP account username
-          FTP_USERNAME: ${{ secrets.WWW-FTPU }}
+          FTP_USERNAME: ${{ secrets.WWW_FTPU }}
           # FTP account password
-          FTP_PASSWORD: ${{ secrets.WWW-FTPP }}
+          FTP_PASSWORD: ${{ secrets.WWW_FTPP }}
           # The local folder to copy, defaults to root project folder
           LOCAL_DIR: www/
           # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
