--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -24,29 +24,31 @@ jobs:
   deploy:
     name: Deploy to webserver
     runs-on: ubuntu-latest
+    	
     steps:
-#    - name: Checkout repository
-#    - uses: actions/checkout@v1
+    - name: Checkout repository
+    - uses: actions/checkout@v1
+      	
+    - name: Download result for job 1
+      uses: actions/download-artifact@v1
+      with:
+        name: www-binaries
+        path: www/cgi-bin/
 
-	- name: Download result for job 1
-	  uses: actions/download-artifact@v1
-	  with:
-		name: www-binaries
-		path: www/cgi-bin/
-	- name: Push to ftp server
-	  uses: SamKirkland/FTP-Deploy-Action@2.0.0
-	  env:
-		# FTP server name (you may need to specify a port)
-		FTP_SERVER: www.florianhofer.it
-		# FTP account username
-		FTP_USERNAME: ${{ secrets.WWW_FTPU }}
-		# FTP account password
-		FTP_PASSWORD: ${{ secrets.WWW_FTPP }}
-		# The local folder to copy, defaults to root project folder
-		LOCAL_DIR: www/
-		# The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
-		REMOTE_DIR: www.florianhofer.it/
-		# upload protocol
-		METHOD: ftp
-		# server port
-		PORT: 21
+    - name: Push to ftp server
+    - uses: SamKirkland/FTP-Deploy-Action@2.0.0
+      env:
+        # FTP server name (you may need to specify a port)
+        FTP_SERVER: www.florianhofer.it
+        # FTP account username
+        FTP_USERNAME: ${{ secrets.WWW_FTPU }}
+        # FTP account password
+        FTP_PASSWORD: ${{ secrets.WWW_FTPP }}
+        # The local folder to copy, defaults to root project folder
+        LOCAL_DIR: www/
+        # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
+        REMOTE_DIR: www.florianhofer.it/
+        # upload protocol
+        METHOD: ftp
+        # server port
+        PORT: 21
