--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -36,7 +36,7 @@ jobs:
         path: www/cgi-bin/
     
     - name: Change permissions
-    - run: chmod 755 www/cgi-bin/*.cgi
+      run: chmod 755 www/cgi-bin/*.cgi
 
     - name: Push to ftp server
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
